argocd/sys_utils_project/monitoring/alertmanager-st.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-service-headless
  namespace: monitoring
spec:
  clusterIP: None
  selector:
    app: alertmanager
  ports:
  - port: 9093
    name: web

---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-service
  namespace: monitoring
spec:
  selector:
    app: alertmanager
    statefulset.kubernetes.io/pod-name: alertmanager-st-0
  ports:
  - port: 9093
    name: web

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: alertmanager-st
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: alertmanager
  serviceName: alertmanager-service-headless
  replicas: 2
  template:
    metadata:
      labels:
        app: alertmanager
    spec:
      containers:
      - name: alertmanager
        image: prom/alertmanager:v0.25.0
        args:
        - --config.file=/etc/alertmanager/config/alertmanager.yaml
        - --data.retention=120h
        - --storage.path=/alertmanager
        ports:
        - containerPort: 9093
          name: web
        volumeMounts:
        - name: alertmanager-storage
          mountPath: /alertmanager
        - name: config-vm
          mountPath: /etc/alertmanager/config/
      volumes:
      - name: config-vm
        configMap:
          name: alertmanager-cm

  volumeClaimTemplates:
  - metadata:
      name: alertmanager-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: standard
      resources:
        requests:
          storage: 1Gi
