argocd/sys_utils_project/monitoring/kube-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-controller-manager-service
  namespace: kube-system
  labels:
    app: kube-controller-manager-metrics
spec:
  selector:
    component: kube-controller-manager
  ports:
  - port: 10257
    targetPort: 10257
    name: metrics
