argocd/sys_utils_project/monitoring/kube-scheduler.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-scheduler-service
  namespace: kube-system
  labels:
    app.kubernetes.io/name: kube-scheduler-metrics
spec:
  selector:
    component: kube-scheduler
  ports:
  - port: 10259
    targetPort: 10259
    name: metrics
