argocd/sys_utils_project/monitoring/nodeexporter-externel.yaml
apiVersion: v1
kind: Service
metadata:
  name: win-exporter
  namespace: monitoring
  labels: 
    app.kubernetes.io/name: win-exporter
spec:
  ports:
  - name: http-metrics
    port: 9182
    

---
apiVersion: v1
kind: Endpoints
metadata:
  name: win-exporter
  namespace: monitoring
subsets:
  - addresses: 
    - ip: 192.168.1.46
    ports:
      - name: http-metrics
        port: 9182
