argocd/sys_utils_project/monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  rules:
    - host: "mon.home.local"
      http:
        paths:
          - pathType: Prefix
            path: /grafana
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
