argocd/sys_utils_project/monitoring/ingress-vmagent.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmagent-ingress
  namespace: monitoring
spec:
  rules:
    - host: "mon.home.local"
      http:
        paths:
          - pathType: Prefix
            path: /vmagent
            backend:
              service:
                name: vmagent-vmagent
                port:
                  number: 8429
